--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,9 @@
 
   {% include head.html %}
 
-  <body class="theme-base-08 sidebar-overlay">
+  <body >
 
     {% include sidebar.html %}
-    {% include comments.html %}
 
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
          content to avoid any CSS collisions with our real content. -->
@@ -45,4 +44,5 @@
       })(document);
     </script>
   </body>
+  {% include comments.html %}
 </html>
